:adhesive_bandage: fix: full spotlight not showing

--- a/FlowOS/public/styles/style.css
+++ b/FlowOS/public/styles/style.css
@@ -50,7 +50,7 @@ body {
 	padding: 0;
 	box-sizing: border-box;
 	overflow: scroll;
-	height: 100%;
+	height: calc(100% - 50px);
 }
 
 .app-switcher li {
